finish sold-out-badge styling

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,7 @@
 <article class="product">
+  <aside class="sold-out">
+    SOLD OUT
+  </aside>
   <header>
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
