--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -73,4 +73,16 @@ main section.products-show {
   }
 }
 
+aside.sold-out {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #DF9998;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 20px;
+    font-size: 0.8em;
+    color: white;
+}
+
 
