--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<h2>Sign Up For Jungle</h2>
+
 <%= form_for @user do |f| %>
   Name: <%= f.text_field :name %><br/>
   Password: <%= f.password_field :password %><br/>
