--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 
 <%= form_for @user do |f| %>
   Name: <%= f.text_field :name %><br/>
+  Email: <%= f.text_field :email %><br/>
   Password: <%= f.password_field :password %><br/>
   Password Confirmation: <%= f.password_field :password_confirmation %><br/>
   <%= f.submit %>
